@@ -5,6 +5,8 @@
 	* src/main/java/iprotium/upnp/Device.java:
 	Call SSDPThread.byebye() on Tomcat stop.
 	Configure and install Servlets in a StandardContext subclass.
+	Added Velocity servlet and SSDP cache page.
+	Handle Device configuration in a Server LifecycleListener.
 
 	* src/main/java/iprotium/upnp/SSDPThread.java:
 	Added alive() method.
